Archive2/5e/8dab13dc501164/main.cpp
int main() {
    int *const ip = new int;
    constexpr int *ip2 = new int;
}